<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context="MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="5"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logodesc"
        android:padding="@dimen/default_padding"
        android:scaleType="centerInside"
        android:src="@drawable/toonsdomain" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_weight="0"
        android:fontFamily="monospace"
        android:padding="@dimen/default_padding"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textColor="@color/material_blue_900"
        android:textSize="@dimen/textsize_large"
        android:textStyle="bold"
        android:typeface="sans"
        tools:targetApi="jelly_bean" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_weight="0"
        android:autoLink="map"
        android:drawableLeft="@drawable/icons8_map_marker_48"
        android:drawablePadding="26dp"
        android:drawableStart="@drawable/icons8_map_marker_48"
        android:paddingHorizontal="@dimen/small_padding"
        android:text="@string/address"
        android:textColorLink="@color/material_blue_900"
        android:textSize="@dimen/textsize_large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_weight="0"
        android:autoLink="phone"
        android:drawablePadding="26dp"
        android:drawableStart="@drawable/icons8_phone_48"
        android:paddingHorizontal="@dimen/small_padding"
        android:text="@string/phone"
        android:textColorLink="@color/material_blue_900"
        android:textSize="@dimen/textsize_large"
        tools:ignore="RtlCompat"
/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_weight="0"
        android:autoLink="web"
        android:drawableLeft="@drawable/icons8_website_48"
        android:drawablePadding="26dp"
        android:drawableStart="@drawable/icons8_website_48"
        android:paddingHorizontal="@dimen/small_padding"
        android:text="@string/website"
        android:textColorLink="@color/material_blue_900"
        android:textSize="@dimen/textsize_large"
 />
</LinearLayout>

</ScrollView>